2008-06-05  Scott James Remnant  <scott@netsplit.com>

	* TODO: Update.

	* init/job.c (job_unblock): Rename to job_finished, since this
	does not behave like event_unblock but more like event_finished
	(job_change_state, job_failed): Change name in call.
	* init/job.h: Update prototype.
	* init/tests/test_job.c (test_unblock): Rename to test_finished
	* init/event.c (event_pending_handle_jobs): Update calls here.

	* init/job.h (Job): Rename blocked to blocker to match event, since
	it has the same use as event->blockers except it's a toggle
	* init/job.c (job_new, job_change_state): Rename where used
	* init/event.c (event_finished): Rename here also since its reset
	* init/tests/test_job.c, init/tests/test_job_process.c,
	* init/tests/test_event.c: Rename in test cases too.

	* init/job.c (job_emit_event): Add a Blocked record to the event's
	blocking list for the starting and stopping events.
	* init/tests/test_job.c (test_emit_event): Add tests for the record
	being added to the list with the right details.
	(test_change_goal): Make sure that a Blocked record is added
	(test_change_state): Make sure that Blocked records are added
	* init/tests/test_job_process.c (test_handler): Also make sure
	that Blocked records are added.

	* init/event.c (event_finished): Clear jobs referenced in the
	blocking list, rather than iterating the entire jobs hash.
	(event_finished_handle_jobs): Drop this function.
	* init/tests/test_event.c (test_finished, test_finished_handle_jobs):
	Merge tests again and test using both the blocking list and job's
	blocked member.

	* init/event.h (event): Add blocking member.
	* init/event.c (event_new): Initialising blocking list.
	* init/tests/test_event.c (test_new): Make sure it's initialised
	to an empty list.

	* init/tests/test_job_process.c (test_handler): Update tests to use
	Blocked.

	* init/event.c (event_pending_handle_jobs): Collect environment
	and events independantly, which means we don't have to worry about